@@ -9,6 +9,7 @@ minor theme modifications for using [fasto](https://wordpress.org/support/theme/
 - [x] footer "made by" => "theme made by"
 - [x] footer only 2 columns
 - [x] modified poster image style
+- [x] mobile header more calm and compact
 
 ## Installation
 
